添加了分类页、搜索页、商品页

--- a/app.json
+++ b/app.json
@@ -12,7 +12,9 @@
     "pages/goods/result/index",
     "pages/cart/index",
     "pages/category/category",
-    "pages/list/list"
+    "pages/list/list",
+    "pages/search/search",
+    "pages/goods/goods"
   ],
   "window": {
     "backgroundTextStyle": "light",
