--- a/app.json
+++ b/app.json
@@ -16,7 +16,9 @@
     "pages/submit/submit",
     "pages/search/search",
     "pages/goods/goods",
-    "pages/ke/item/item"
+    "pages/ke/item/item",
+    "pages/order/order",
+    "pages/pay/pay"
   ],
   "window": {
     "backgroundTextStyle": "light",
