--- a/cloud/getAnswerOne/package.json
+++ b/cloud/getAnswerOne/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LoginOut.js",
+  "name": "getAnswerOne",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "~2.6.1"
+    "wx-server-sdk": "latest"
   }
 }
